--- a/BlogApp-ReactQuery/src/index.css
+++ b/BlogApp-ReactQuery/src/index.css
@@ -1,3 +1,8 @@
+body, ul, h1, h4 {
+  padding: 0;
+  margin: 0;
+}
+
 .success {
   color: green;
 }
@@ -13,4 +18,32 @@
   border-radius: 5px;
   padding: 10px;
   margin-bottom: 10px;
+}
+
+.container {
+  padding: 15px 20px;
+}
+
+.user {
+  display: flex;
+}
+
+.users-header {
+  display: flex;
+  align-items: end;
+}
+
+.navbar {
+  display: flex;
+  justify-content: end;
+  background-color: #ccc;
+  padding: 15px 20px;
+}
+
+.users-header *, .user * {
+  width: 150px;
+}
+
+.mb-2 {
+  margin-bottom: 2rem;
 }
