--- a/BlogApp-ReactQuery/src/index.css
+++ b/BlogApp-ReactQuery/src/index.css
@@ -37,7 +37,7 @@ body, ul, h1, h2, h4 {
 
 .navbar {
   display: flex;
-  justify-content: end;
+  justify-content: space-between;
   background-color: #ccc;
   padding: 15px 20px;
 }
@@ -56,4 +56,8 @@ body, ul, h1, h2, h4 {
 
 .pl-40 {
   padding-left: 40px;
+}
+
+.mr-1 {
+  margin-right: 1rem;
 }
