--- a/BlogApp-ReactQuery/src/index.css
+++ b/BlogApp-ReactQuery/src/index.css
@@ -1,63 +1,3 @@
-body, ul, h1, h2, h4 {
+ul {
   padding: 0;
-  margin: 0;
-}
-
-.success {
-  color: green;
-}
-
-.error {
-  color: red;
-}
-
-.feedback {
-  background: lightgrey;
-  font-size: 20px;
-  border-style: solid;
-  border-radius: 5px;
-  padding: 10px;
-  margin-bottom: 10px;
-}
-
-.container {
-  padding: 15px 20px;
-}
-
-.user {
-  display: flex;
-  margin-bottom: 10px;
-}
-
-.users-header {
-  display: flex;
-  align-items: end;
-  margin-bottom: 10px;
-}
-
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  background-color: #ccc;
-  padding: 15px 20px;
-}
-
-.users-header *, .user * {
-  width: 150px;
-}
-
-.mb-2 {
-  margin-bottom: 2rem;
-}
-
-.mb-1 {
-  margin-bottom: 1rem;
-}
-
-.pl-40 {
-  padding-left: 40px;
-}
-
-.mr-1 {
-  margin-right: 1rem;
 }
